--- a/dataset/data2/html02.html
+++ b/dataset/data2/html02.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -17,8 +18,9 @@
   <a href="http://www.naver.com" target="_blank">네이버 새창으로</a> 
   <br><br>
   <a href="www.duam.net">다음</a>
-  <a href="http://www.duam.net">다음</a>
-  
+  <a href="https://www.daum.net">다음</a>
+  <a href="http://www.daum.net">다음</a>
+
 </body>
 </html>
 
